New bootstrap datepicker added

--- a/aliens/templates/home.html
+++ b/aliens/templates/home.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+        <title>Form</title>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <link rel="stylesheet" href="/resources/demos/style.css" />
+        <script>
+            $(function() {
+                $( "#id_date" ).datepicker();
+            });
+        </script>
         <title>Agriconnected Aliens</title>
     </head>
     <body>
-        <h1>Cadastro de Aliens</h1>
         <form class="" action="" method="post">
             <fieldset>
-                <legend>Cadastro:</legend>
-                {% csrf_token %}
-                <table>
-                    <td>{{ form.as_table }}</td>
-                </table>
+                <legend><h2>Cadastro:</h2></legend>
+                            <form action="/datepickerview/" method="post">
+                            {% for field in form %}
+                            <p>{{ field.label_tag }} {{ field }}</p>
+                                <!--{{ form.date }} -->
+                            {% endfor %}
+                            </form>
+
+
+
+
+                            <script>
+                                $(function () {
+                                    $('.datepicker').datepciker({
+                                        format:'YYYY-MM-DD '
+                                    });
+                                });
+                            </script>
+
                 <hr />
                 <input type="Submit" />
             </fieldset>
