--- a/aliens/templates/list.html
+++ b/aliens/templates/list.html
@@ -1,33 +1,19 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Agriconnected Aliens</title>
-        <style>
-            table, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-            th, td {
-                padding: 5px;
-                text-align: left;
-            }
-        </style>
-    </head>
-    <body>
-        <table style="width:100%">
-            <tr>
-                <th>Cidade</th>
-                <th>Estado</th>
-                <th>Data</th>
-            </tr>
-            {% for alien in aliens %}
-            <tr>
-                <td>{{ alien.city }}</td>
-                <td>{{ alien.state_name }}</td>
-                <td>{{ alien.date }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<body>
+    <table class="table">
+        <tr>
+            <th>Cidade</th>
+            <th>Estado</th>
+            <th>Data</th>
+        </tr>
+        {% for alien in aliens %}
+        <tr>
+            <td>{{ alien.city }}</td>
+            <td>{{ alien.state_name }}</td>
+            <td>{{ alien.date }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+</body>
+{% endblock %}
