--- a/aliens/templates/counter.html
+++ b/aliens/templates/counter.html
@@ -1,32 +1,23 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Aliens Counter</title>
-        <style>
-            table, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-            th, td {
-                padding: 5px;
-                text-align: left;
-            }
-
-        </style>
-    </head>
-    <body>
-        <table style="width=100%">
-            <tr>
-                <th>Estado</th>
-                <th>Total de Eventos</th>
-            </tr>
-            {% for state in states %}
-            <tr>
-                <td>{{ state }}</td>
-                <td>{{ state.count }}</td>
-            </tr>
-            {% endfor %}
+{% extends "base.html" %}
+{% block content %}
+<body>
+    <div class="container">
+        <table class="table table-bordered table-hover ">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Estado</th>
+                    <th>Total de Eventos</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for state in states %}
+                <tr>
+                    <td>{{ state }}</td>
+                    <td>{{ state.count }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
-    </body>
-</html>
+    </div>
+</body>
+{% endblock %}
