--- a/aliens/templates/counter.html
+++ b/aliens/templates/counter.html
@@ -1,6 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
-<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{% url 'aliens:home' %}">Agriconnected Aliens</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aliens:home' %}">Home <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aliens:register' %}">Cadastro</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
+            </li>
+            <li class="nav-item  active">
+                <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
+
     <div class="container">
         <table class="table table-bordered table-hover ">
             <thead class="thead-dark">
@@ -19,5 +43,5 @@
             </tbody>
         </table>
     </div>
-</body>
+
 {% endblock %}
