--- a/aliens/templates/register.html
+++ b/aliens/templates/register.html
@@ -3,24 +3,63 @@
 {% load static %}
 
 {% block content %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{% url 'aliens:home' %}">Agriconnected Aliens</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aliens:home' %}">Home <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'aliens:register' %}">Cadastro</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 
 <div class="container">
     <form action="" method="post">
-        <div class="form-group">
-            <legend><h2>Cadastro:</h2></legend>
-                    <p>{{ form.city.label }}<br>{{ form.city }}</p>
-                    <p>{{ form.state.label }}<br>{{ form.state }}</p>
-                    <p>{{ form.date.label }}<br>{{ form.date }}
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span></p>
-            <script>
-                $('#datepicker').datepicker({
-                    uiLibrary: 'bootstrap4'
-                });
-            </script>
-            <hr />
-            <input class="btn btn-primary" type="submit" value="Enviar" />
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <div class="form-group">
+                    <legend><h2>Cadastro</h2></legend>
+                            <p>{{ form.city.label }}<br>{{ form.city }}</p>
+                            <p>{{ form.state.label }}<br>{{ form.state }}</p>
+                            <p>{{ form.date.label }}<br>{{ form.date }}
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span></p>
+                    <script>
+                        $('#datepicker').datepicker({
+                            uiLibrary: 'bootstrap4'
+                        });
+                    </script>
+                    <hr />
+
+                </div>
+            </div>
+            <div class="col-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-5"></div>
+            <div class="col-1">
+                <input class="btn btn-success" type="submit" value="Salvar" />
+            </div>
+            <div class="col-1">
+                <a href="{% url 'aliens:home' %}" class="btn btn-primary">Voltar</a>
+            </div>
+            <div class="col-5"></div>
         </div>
     </form>
 </div>
