--- a/aliens/templates/base.html
+++ b/aliens/templates/base.html
@@ -4,16 +4,27 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Agriconnected Aliens</title>
+        <title>Agriconnected | Aliens</title>
+        <link rel="shorcut icon" type="image/png" href="{% static '/images/favicon.ico' %}">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/4.0.0/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
         <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     </head>
-    <body>
+    <body style="font-family: Helvetica">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00702e;">
+            <a class="navbar-brand" href="{% url 'aliens:home' %}">
+                <img src="{% static 'images/alien-icon.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            {% block navbar %}{% endblock %}
+        </nav>
+
         {% block content %}{% endblock %}
     </body>
 </html>
