--- a/aliens/templates/counter.html
+++ b/aliens/templates/counter.html
@@ -1,47 +1,49 @@
 {% extends "base.html" %}
+{% load static %}
+{% block navbar %}
+<div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'aliens:home' %}">Home <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'aliens:register' %}">Cadastro</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
+        </li>
+        <li class="nav-item  active">
+            <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
+        </li>
+    </ul>
+</div>
+{% endblock %}
+
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'aliens:home' %}">Agriconnected Aliens</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'aliens:home' %}">Home <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'aliens:register' %}">Cadastro</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
-            </li>
-            <li class="nav-item  active">
-                <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
-            </li>
-        </ul>
+<div class="container">
+    <div class="row"><div class="col"><br><br></div></div>
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <table class="table table-bordered table-hover">
+                <thead class="thead" align="center">
+                    <tr>
+                        <th>Estado</th>
+                        <th>Total de Eventos</th>
+                    </tr>
+                </thead>
+                <tbody align="center">
+                    {% for state in states %}
+                        <tr>
+                        <td>{{ state }}</td>
+                        <td>{{ state.count }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col-4"></div>
     </div>
-</nav>
-
-
-
-    <div class="container">
-        <table class="table table-bordered table-hover ">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Estado</th>
-                    <th>Total de Eventos</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for state in states %}
-                <tr>
-                    <td>{{ state }}</td>
-                    <td>{{ state.count }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+</div>
 
 {% endblock %}
