--- a/aliens/templates/list.html
+++ b/aliens/templates/list.html
@@ -1,48 +1,47 @@
 {% extends "base.html" %}
+{% load static %}
+{% block navbar %}
+<div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'aliens:home' %}">Home <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'aliens:register' %}">Cadastro</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
+        </li>
+    </ul>
+</div>
+{% endblock %}
+
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'aliens:home' %}">Agriconnected Aliens</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'aliens:home' %}">Home <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'aliens:register' %}">Cadastro</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
-            </li>
-        </ul>
+<div class="container">
+    <div class="row"><div class="col"><br><br></div></div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <table class="table table-bordered table-hover">
+                <thead align="center">
+                    <th>Cidade</th>
+                    <th>Estado</th>
+                    <th>Data</th>
+                </thead>
+                {% for alien in aliens %}
+                <tr align="center">
+                    <td>{{ alien.city }}</td>
+                    <td>{{ alien.state_name }}</td>
+                    <td>{{ alien.date }}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <div class="col-3"></div>
     </div>
-</nav>
-
-
-
-
-    <div class="container">
-
-
-        <table class="table">
-            <tr>
-                <th>Cidade</th>
-                <th>Estado</th>
-                <th>Data</th>
-            </tr>
-            {% for alien in aliens %}
-            <tr>
-                <td>{{ alien.city }}</td>
-                <td>{{ alien.state_name }}</td>
-                <td>{{ alien.date }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
+</div>
 
 {% endblock %}
