--- a/aliens/templates/list.html
+++ b/aliens/templates/list.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}
+<title>Listagem | Aliens </title>
+{% endblock %}
 {% block navbar %}
 <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
     <ul class="navbar-nav ml-auto">
@@ -13,19 +16,19 @@
             <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
         </li>
         <li class="nav-item ">
-            <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
+            <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Sumário</a>
         </li>
     </ul>
 </div>
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="row"><div class="col"><br><br></div></div>
     <div class="row">
         <div class="col-3"></div>
         <div class="col-6">
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-hover ">
                 <thead align="center">
                     <th>Cidade</th>
                     <th>Estado</th>
