--- a/aliens/templates/register.html
+++ b/aliens/templates/register.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% load static %}
-
+{% block title %}
+<title>Cadastro | Aliens </title>
+{% endblock %}
 {% block navbar %}
 <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
     <ul class="navbar-nav ml-auto">
@@ -15,7 +17,7 @@
             <a class="nav-link" href="{% url 'aliens:alien_list' %}">Listagem</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Contagem</a>
+            <a class="nav-link " href="{% url 'aliens:alien_counter' %}">Sumário</a>
         </li>
     </ul>
 </div>
