--- a/aliens/static/css/style.css
+++ b/aliens/static/css/style.css
@@ -1,3 +1,18 @@
+html, body{
+    height: 100%;
+}
+
+body{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.content{
+    flex: 1 0 auto;
+}
+
+
 .custom-link {
     color: #ffffff;
 }
@@ -12,7 +27,7 @@ a:active{
 }
 
 .custom-footer {
-  position: fixed;
+  flex: 0 0 auto;
   left: 0;
   bottom: 0;
   width: 100%;
