footer always on bottom properties fixed

--- a/aliens/templates/base.html
+++ b/aliens/templates/base.html
@@ -27,8 +27,9 @@
             </button>
             {% block navbar %}{% endblock %}
         </nav>
-
-        {% block content %}{% endblock %}
+        <div class="content">
+            {% block content %}{% endblock %}
+        </div>
         <footer class="footer custom-footer">
             <div class="container">
                 <div class="row footer-row-2">
