final version of base.html

--- a/aliens/templates/base.html
+++ b/aliens/templates/base.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body style="font-family: 'Montserrat', sans-serif">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00702e;">
+        <nav class="navbar navbar-expand-lg navbar-dark nav-color">
             <a class="navbar-brand" href="{% url 'aliens:home' %}">
                 <img src="{% static 'images/alien-white-quadrado.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             </a>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="row-md">
-                <div class="col-md" style="background-color: #013818">
+                <div class="col-md col-second-footer">
                     <small>Desenvoledor: Tâmer Pinheiro Cuba</small>
                 </div>
             </div>
