--- a/aliens/templates/home.html
+++ b/aliens/templates/home.html
@@ -26,9 +26,9 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col"><br>
+        <div class="col-3"><br>
             <div class="text-center">
-                <h1>Conheça o projeto Aliens</h1>
+                <h2>O projeto</h2>
             </div>
         </div>
     </div>
@@ -41,11 +41,6 @@
         </div>
         <div class="col-8"><br>
             <img src="{% static 'images/alien-circle-1.jpg' %}" class="rounded float-left img-fluid" alt="Alien circle" width="502" height="370">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <p></p>
         </div>
     </div>
 </div>
